--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <a href=""><i class='bx bxl-facebook' ></i></a>
     </div>
     
-    <img src="/gambar/user.png" alt="profile">
+    <img src="gambar/user.png" alt="profile">
 
   </section>
 
@@ -58,7 +58,7 @@
 
     
     <div class="about-img">
-      <img src="/gambar/user2.png" alt="user2">
+      <img src="gambar/user2.png" alt="user2">
       <span class="circle-spin"></span>
     </div>
 
